wrong action name

--- a/.github/workflows/pull-request-target.yml
+++ b/.github/workflows/pull-request-target.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Fetch repo for diffing
         uses: actions/checkout@v3
       - name: Check if vcs-tunable-analysis changed
-        uses: actions/get-diff-action@v6
+        uses: technote-space/get-diff-action@v6
         with:
           PATTERNS: |
             +hatch-vcs-tunable/**/*
