--- a/.github/workflows/pull-request-target.yml
+++ b/.github/workflows/pull-request-target.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Set diff output for hatch-vcs-tunable
         id: hatch-vcs-tunable-diff
         run: |
-          echo "HATCH_VCS_TUNABLE_DIFF=${GIT_DIFF_FILTERED}" >> $GITHUB_OUTPUT
+          echo "HATCH_VCS_TUNABLE_DIFF=\"${GIT_DIFF_FILTERED}\"" >> $GITHUB_OUTPUT
   hatch-vcs-tunable-analysis:
     runs-on: ubuntu-latest
     needs: [which-paths]
