--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Set diff output for hatch-vcs-tunable
         id: hatch-vcs-tunable-diff
         run: |
-          echo "HATCH_VCS_TUNABLE_DIFF=${GIT_DIFF_FILTERED}" >> $GITHUB_OUTPUT
+          echo "HATCH_VCS_TUNABLE_DIFF=\"${GIT_DIFF_FILTERED}\"" >> $GITHUB_OUTPUT
       - name: Check if repo management changed
         uses: technote-space/get-diff-action@v6
         with:
@@ -31,7 +31,7 @@ jobs:
       - name: Set diff output for management
         id: management-diff
         run: |
-          echo MANAGEMENT_DIFF=${GIT_DIFF_FILTERED}" >> $GITHUB_OUTPUT
+          echo "MANAGEMENT_DIFF=\"${GIT_DIFF_FILTERED}\"" >> $GITHUB_OUTPUT
 
   hatch-vcs-tunable-analysis:
     if: ${{ needs.which-paths.outputs.HATCH_VCS_TUNABLE_DIFF }}
