--- a/.github/workflows/pull-request-target.yml
+++ b/.github/workflows/pull-request-target.yml
@@ -28,7 +28,7 @@ jobs:
     if: ${{ needs.which-paths.outputs.HATCH_VCS_TUNABLE_DIFF }}
     steps:
       - name: Ask for news fragments
-        if: ${{ !contains(needs.which-paths.outputs.HATCH_VCS_TUNABLE_DIFF, changelog.d) }}
+        if: ${{ !contains(needs.which-paths.outputs.HATCH_VCS_TUNABLE_DIFF, "changelog.d") }}
         run: |
           echo 'Please add a news fragment for your change.'
           exit 1
