--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -60,8 +60,10 @@ jobs:
         working-directory: hatch-vcs-tunable
       - name: Check types
         run: hatch run check
+        working-directory: hatch-vcs-tunable
       - name: Quick tests
         run: hatch run test
+        working-directory: hatch-vcs-tunable
 
   hatch-vcs-tunable-tests:
     if: ${{ needs.which-paths.outputs.HATCH_VCS_TUNABLE_DIFF }}
@@ -84,5 +86,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Create default env
         run: hatch env create test
+        working-directory: hatch-vcs-tunable
       - name: Run all tests
         run: hatch run test:test
+        working-directory: hatch-vcs-tunable
