--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -80,7 +80,7 @@ jobs:
           python-version: '3.10'
       - name: Set up python environment
         run: |
-          python -m install pipx
+          python -m pip install pipx
           pipx install hatch
       - name: Fetch repo
         uses: actions/checkout@v3
