--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -41,7 +41,7 @@ jobs:
     steps:
       - name: Check diff
         run: |
-          echo "Diff is: ${{needs.which-paths.outputs.HATCH_VCS_TUNABLE_DIFF"
+          echo "Diff is: ${{needs.which-paths.outputs.HATCH_VCS_TUNABLE_DIFF}}"
           echo "Is equal to empty string: ${{needs.which-paths.outputs.HATCH_VCS_TUNABLE_DIFF != ''}}"
       - name: Install python
         uses: actions/setup-python@v5
