--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -42,7 +42,9 @@ jobs:
       - name: Check diff
         run: |
           echo "Diff is: ${{needs.which-paths.outputs.HATCH_VCS_TUNABLE_DIFF}}"
-          echo "Is equal to empty string: ${{needs.which-paths.outputs.HATCH_VCS_TUNABLE_DIFF != ''}}"
+          echo "Is equal to empty string: ${{needs.which-paths.outputs.HATCH_VCS_TUNABLE_DIFF == ''}}"
+          echo "Is equal to null: ${{needs.which-paths.outputs.HATCH_VCS_TUNABLE_DIFF == null}}"
+          echo "Contains empty string: ${{contains(needs.which-paths.outputs.HATCH_VCS_TUNABLE_DIFF, '')}}"
       - name: Install python
         uses: actions/setup-python@v5
         with:
