--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -16,6 +16,8 @@ jobs:
       HATCH_VCS_TUNABLE_DIFF: ${{ steps.hatch-vcs-tunable-diff.outputs.HATCH_VCS_TUNABLE_DIFF }}
       MANAGEMENT_DIFF: ${{ steps.management-diff.outputs.MANAGEMENT_DIFF }}
     steps:
+      - name: Fetch repo for diffing
+        uses: actions/checkout@v3
       - name: Check if vcs-tunable-analysis changed
         uses: technote-space/get-diff-action@v6
         with:
