--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -33,6 +33,8 @@ jobs:
         uses: technote-space/get-diff-action@v6
         with:
           PATTERNS: |
+            **/*
+            .github/**/*
             !hatch-vcs-tunable/**/*
       - name: Set diff output for management
         id: management-diff
