--- a/.github/workflows/pull-request-target.yml
+++ b/.github/workflows/pull-request-target.yml
@@ -28,6 +28,10 @@ jobs:
     needs: [which-paths]
     if: ${{ contains(needs.which-paths.outputs.HATCH_VCS_TUNABLE_DIFF, 'hatch_vcs_tunable')}}
     steps:
+      - name: What
+        run: |
+          echo ${{ needs.which-paths.outputs.HATCH_VCS_TUNABLE_DIFF }}
+          echo ${{ contains(needs.which-paths.outputs.HATCHV_CS_TUNABLE_DIFF, 'hatch_vcs_tunable') }}
       - name: Ask for news fragments
         if: ${{ !contains(needs.which-paths.outputs.HATCH_VCS_TUNABLE_DIFF, 'changelog.d') }}
         run: |
