--- a/.github/workflows/pull-request-checking.yml
+++ b/.github/workflows/pull-request-checking.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       HATCH_VCS_TUNABLE_DIFF: ${{ steps.hatch-vcs-tunable-diff.outputs.HATCH_VCS_TUNABLE_DIFF }}
+      HATCH_DEPENDENCY_COVERSION_DIFF: ${{ steps.hatch-dependency-coversion-diff.outputs.HATCH_DEPENDENCY_COVERSION_DIFF }}
     steps:
       - name: Fetch repo for diffing
         uses: actions/checkout@v3
@@ -23,6 +24,16 @@ jobs:
         id: hatch-vcs-tunable-diff
         run: |
           echo "HATCH_VCS_TUNABLE_DIFF=\"${GIT_DIFF_FILTERED}\"" >> $GITHUB_OUTPUT
+      - name: Check if dependency-coversion analysis changed
+        uses: technote-space/get-diff-action@v6
+        with:
+          PATTERNS: |
+            hatch-dependency-coversion/**/*
+            hatch-dependency-coversion/**/.*
+      - name: Set diff output for hatch-dependency-coversion
+        id: hatch-dependency-coversion-diff
+        run: |
+          echo "HATCH_DEPENDENCY_COVERSION_DIFF=\"${GIT_DIFF_FILTERED}\"" >> $GITHUB_OUTPUT
   hatch-vcs-tunable-analysis:
     if: ${{ contains(needs.which-paths.outputs.HATCH_VCS_TUNABLE_DIFF, 'hatch_vcs_tunable')}}
     runs-on: ubuntu-latest
@@ -31,5 +42,15 @@ jobs:
       - name: Ask for news fragments
         if: ${{ !contains(needs.which-paths.outputs.HATCH_VCS_TUNABLE_DIFF, 'changelog.d') }}
         run: |
-          echo 'Please add a news fragment for your change.'
+          echo 'Please add a news fragment for your change to hatch-vcs-tunable.'
+          exit 1
+  hatch-dependency-coversion-analysis:
+    runs-on: ubuntu-latest
+    needs: [which-paths]
+    if: ${{ contains(needs.which-paths.outputs.HATCH_DEPENDENCY_COVERSION_DIFF, 'hatch_dependency_coversion') }}
+    steps:
+      - name: Ask for news fragments
+        if: ${{ !contains(needs.which-paths.outputs.HATCH_DEPENDENCY_COVERSION_DIFF, 'changelog.d') }}
+        run: |
+          echo 'Please add a news fragment for your change to hatch-dependency-coversion.'
           exit 1
