--- a/.github/workflows/publish-hatch-vcs-tunable.yml
+++ b/.github/workflows/publish-hatch-vcs-tunable.yml
@@ -17,6 +17,7 @@ jobs:
       uses: actions/checkout@v3
     - name: Build distribution
       run: |
+        python -m pip install hatch
         hatch build
       working-directory:
         hatch-vcs-tunable
