--- a/.github/workflows/publish-hatch-dependency-coversion.yml
+++ b/.github/workflows/publish-hatch-dependency-coversion.yml
@@ -17,6 +17,7 @@ jobs:
       uses: actions/checkout@v3
     - name: Build distribution
       run: |
+        python -m install hatch
         hatch build
       working-directory:
         hatch-dependency-coversion
